oauth2-proxy.deployment.yaml
## This is test deployment for Kubernetes platforms.
## This is _not_ intended to be use in producction.
##
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: oauth2-proxy
  name: oauth2-proxy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: oauth2-proxy
  template:
    metadata:
      labels:
        app: oauth2-proxy
    spec:
      containers:
      - image: bitnami/oauth2-proxy
        name: oauth2-proxy
        args:
        - --provider=github
        - --email-domain=*
        - --upstream=file:///dev/null
        - --http-address=0.0.0.0:4180 
        - --cookie-secure=false
      volumes:
      - name: secret-volume
        secret:
          secretName: oauth2-proxy-secret
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: oauth2-proxy
  name: oauth2-proxy
spec:
  ports:
  - port: 4180
    protocol: TCP
    targetPort: 4180
  selector:
    app: oauth2-proxy
  type: ClusterIP
