syncthing.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: syncthing
  labels:
    run: syncthing
spec:
  ports:
  - port: 80
    name: syncthing
    targetPort: 8384
  selector:
    run: syncthing
