oauth2-proxy.ingress.yaml
apiVersion: v1
kind: List
items:
- apiVersion: extensions/v1beta1
  kind: Ingress
  metadata:
    annotations:
       certmanager.k8s.io/acme-challenge-type: http01
       certmanager.k8s.io/cluster-issuer: letsencrypt-prod
    name: oauth2-proxy
  spec:
    rules:
    - host: syncthing.jcastillo.kube.um.edu.ar
      http:
        paths:
        - backend:
            serviceName: oauth2-proxy
            servicePort: 4180
          path: /oauth2
    tls:
    - hosts:
      - syncthing.jcastillo.kube.um.edu.ar
      secretName: letsencrypt-prod
